# to-not-do

./: Cargo.toml
.github/workflows/: release.yml  rust.yml
src/: cli.rs  error.rs  file_management.rs  main.rs
